--- a/drag-drop/styles.css
+++ b/drag-drop/styles.css
@@ -10,6 +10,26 @@ body {
     background-color: #f4f4f4;
 }
 
+#button-double {
+    display: flex;
+    flex-flow: row-wrap;
+    gap: 15px;
+    margin: 50px;
+}
+button {
+    background-color: rgb(203, 216, 228);
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1.2rem;
+    font-family: montserrat;
+    padding: 1rem 0.5rem;
+    transition: background-color 0.3s;
+}
+
+button:hover {
+background-color: rgb(128, 199, 247);
+cursor: pointer;
+}
 #container {
     display: flex;
     gap: 20px;
@@ -27,6 +47,7 @@ body {
     border-radius: 8px;
     transition: background-color 0.3s;
 }
+
 /* 
 #bastos {
     background-image: url(images/as-bastos.png);
@@ -49,11 +70,28 @@ body {
 }
 
 .card {
-    padding: 10px 20px;
+    padding: 10px 10px;
     border-radius: 5px;
     cursor: grab;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
-    width: 50px;
-    aspect-ratio: 9/20;
+    width: 60px;
+    aspect-ratio: 9/15;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    background-size: contain;
+    background-repeat: no-repeat;
+font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.card-text-top {
+
+}
+
+.card-text-bottom {
+    padding: 0;
+    margin: 0;
+    text-align: right;
+
 }
