--- a/drag-dropV2/styles.css
+++ b/drag-dropV2/styles.css
@@ -2,46 +2,23 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 100vh;
     background-color: #f4f4f4;
-box-sizing: border-box;
+    box-sizing: border-box;
 }
 html {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
+margin: 0;
+padding: 0;
+box-sizing: border-box;}
 
-#button-double {
-    display: flex;
-    flex-flow: row-wrap;
-    gap: 15px;
-    margin: 50px;
-    justify-content: center;
-}
-button {
-    background-color: rgb(203, 216, 228);
-    border-radius: 5px;
-    text-align: center;
-    font-size: 1.2rem;
-    font-family: montserrat;
-    padding: 1rem 0.5rem;
-    transition: background-color 0.3s;
-}
-
-button:hover {
-background-color: rgb(128, 199, 247);
-cursor: pointer;
-}
 #container {
     display: flex;
     gap: 20px;
     width: 80%;
-    justify-content: center;
-margin: auto;
 }
 
 .drop-zone {
@@ -55,7 +32,6 @@ margin: auto;
     border-radius: 8px;
     transition: background-color 0.3s;
 }
-
 /* 
 #bastos {
     background-image: url(images/as-bastos.png);
@@ -78,28 +54,11 @@ margin: auto;
 }
 
 .card {
-    padding: 10px 10px;
+    padding: 10px 20px;
     border-radius: 5px;
     cursor: grab;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
     position: relative;
-    width: 60px;
-    aspect-ratio: 9/15;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    background-size: contain;
-    background-repeat: no-repeat;
-font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-}
-
-.card-text-top {
-
-}
-
-.card-text-bottom {
-    padding: 0;
-    margin: 0;
-    text-align: right;
-
+    width: 50px;
+    aspect-ratio: 9/20;
 }
