--- a/repaso/ejercicio-2/style.css
+++ b/repaso/ejercicio-2/style.css
@@ -6,23 +6,23 @@ body {
 }
 
 .container {
-    display: flex;
+   
     margin: 8vh 8vw;
-    justify-content: space-around;
-    flex-flow: row wrap;
-    box-sizing: border-box;
-    align-items: flex-start;
 }
 
-.note {
-    background-color: rgb(195, 247, 197);
+.parrafo {
+    background-color: rgb(238, 239, 238);
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     padding: 15px 15px;
     max-width: 550px;
     min-width: 200px;
     height: auto;
     display: flex;
-    flex-flow: column;
+    flex-flow: row;
+    justify-content: space-between;
+    position: relative;
+    margin-bottom: 10px;
+
 }
 .button {
     padding: 10px 20px;
@@ -34,17 +34,34 @@ body {
     text-align: center;
     width: fit-content;
 transition: background-color 0.3s;
-order: 2;
+height: fit-content;
+align-self: flex-start;
 }
 .button-edit {
     background-color: #4edc53;
+    order: 2;
+
 }
 
 .button-ok {
     background-color: rgb(98, 215, 153);
+    display: none;
+    order: 2;
+
 }
 .button-no {
     background-color: rgb(215, 137, 98);
+    display: none;
+    order: 2;
+
+}
+
+.button-new {
+    background-color: blanchedalmond;
+    display: block;
+    position: absolute;
+    top: -35px;
+    left: -60px;
 }
 
 .button:hover {
